--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "expo-image-picker": "~14.3.2",
+    "expo-sqlite": "~11.3.3",
+    "expo-file-system": "~15.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
